--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
 server.port = 8080
+
+spring.datasource.url=jdbc:mysql://localhost:3306/cyber_games
+spring.datasource.username=user
+spring.datasource.password=artemov010
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jackson.serialization.write_dates_as_timestamps=false 
